--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ipop",
+  "name": "jquery-quicklook",
   "version": "0.0.1",
   "description": "Popup iframe similar to quick look in MacOSX",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryanshawty/ipop.git"
+    "url": "git+https://github.com/ryanshawty/jquery-quicklook.git"
   },
   "keywords": [
     "ipop",
@@ -18,9 +18,9 @@
   "author": "Ryan Shaw",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ryanshawty/ipop/issues"
+    "url": "https://github.com/ryanshawty/jquery-quicklook/issues"
   },
-  "homepage": "https://github.com/ryanshawty/ipop#readme",
+  "homepage": "https://github.com/ryanshawty/jquery-quicklook#readme",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.1",
