--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-uglify": "^0.9.2"
+    "grunt-contrib-uglify": "^0.9.2",
+    "less-plugin-autoprefix": "^1.4.2"
   }
 }
